--- a/src/app/components/offer-details/offer-details.component.html
+++ b/src/app/components/offer-details/offer-details.component.html
@@ -1,3 +1,17 @@
-<div>
-    {{ offer | json }}
+<div *ngIf="!offer">
+    <md-progress-bar mode="indeterminate"  color="accent"></md-progress-bar>
 </div>
+
+<md-card class="example-card" *ngIf="offer">
+    <md-card-header>
+        <md-card-title>{{offer.title}}</md-card-title>
+        <button md-button (click)="goBack()">Back</button>
+    </md-card-header>
+    <md-card-content>
+        {{ offer | json }}
+    </md-card-content>
+    <md-card-actions>
+        <button md-button *ngIf="!offerListS.offerIsChosen(offer.id)" (click)="chooseOffer()">Add</button>
+        <button md-button *ngIf="offerListS.offerIsChosen(offer.id)" (click)="removeOffer()">Remove</button>
+    </md-card-actions>
+</md-card>
